<resources>
    <string name="app_name">NicNiuh2022</string>

    <!-- Login -->
    <string name="edt_nombre_usuario">Nombre de Usuario</string>
    <string name="edt_contrasenha">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registro">¿Todavía no te registras?</string>
    <string name="err_nombre_usuario">Falta Nombre de Usuario</string>
    <string name="err_contrasenha">Falta Contraseña</string>

    <!--Registro -->
    <string name="edt_correo">Correo Electrónico</string>
    <string name="edt_telefono">Teléfono</string>
    <string name="edt_confirmar_contrasenha">Confirmar Contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_ingreso">¿Ya tienes una cuenta?</string>
    <string name="err_correo">Falta Correo</string>
    <string name="err_correo_no_valido">No es un Correo</string>
    <string name="err_telefono">Falta Número Telefónico</string>
    <string name="err_confirmar_contrasenha">Las constraseñas no coinciden</string>

    <!-- Generado Automáticamente -->
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_principal">Principal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>